--- a/egov-mdms-service/pom.xml
+++ b/egov-mdms-service/pom.xml
@@ -19,7 +19,28 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <lombok.version>1.18.24</lombok.version>
   </properties>
-  <dependencies>
+  <dependencies> 
+    <dependency>  
+        <groupId>javax.servlet</groupId>  
+        <artifactId>javax.servlet-api</artifactId>  
+        <version>4.0.1</version>  
+        <scope>provided</scope>  
+    </dependency>  
+    <dependency>  
+        <groupId>javax.validation</groupId>  
+        <artifactId>validation-api</artifactId>  
+        <version>2.0.1.Final</version>  
+    </dependency>  
+    <dependency>  
+        <groupId>org.hibernate.validator</groupId>  
+        <artifactId>hibernate-validator</artifactId>  
+        <version>6.0.13.Final</version>  
+    </dependency>  
+    <dependency>  
+        <groupId>org.glassfish</groupId>  
+        <artifactId>javax.el</artifactId>  
+        <version>3.0.0</version>  
+    </dependency>  
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
